# Zumpy

./: CMakeLists.txt  Doxyfile  Python-Doxyfile  README.md
doc/c/latex/: dir_87681be5ca089ff245d0d9f911af7faf.tex  main_8c.tex  refman.aux  refman.out  structarray.tex  zumpy_8c.tex
doc/c/man/man3/: _home_zach_Development_C_Zumpy_src_.3  _home_zach_Development_C_Zumpy_src_c_include_.3  array.3  main.c.3  zumpy.h.3
doc/latex/: annotated.tex  dir_3b19ecf29356981f494745fbef7e56bf.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc  zumpy_8h.tex  zumpy_8h_source.tex
doc/man/man3/: _home_zach_Development_C_Zumpy_src_c_.3  zumpy.c.3
doc/python/latex/: annotated.tex  classzumpy_1_1array.tex  classzumpy_1_1array__wrapper.eps  classzumpy_1_1array__wrapper.tex  dir_5c0d64f70903e893b1efe571a4b8de29.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  example_8py.tex  example_8py_source.tex  files.tex  hierarchy.tex  namespaceexample.tex  namespaces.tex  namespacezumpy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  zumpy_8py.tex  zumpy_8py_source.tex
doc/python/man/man3/: _home_zach_Development_C_Zumpy_src_.3  _home_zach_Development_C_Zumpy_src_python_.3  example.3  example.py.3  zumpy.3  zumpy.py.3  zumpy_array.3  zumpy_array_wrapper.3
latex/: md_README.tex  refman.tex
src/c/: README.md  access.c  filter.c  main.c  maths.c  print.c  slice.c  zumpy.c  zumpy_internal.c
src/c/include/: zumpy.h  zumpy_internal.h
src/python/: example.py  zumpy.py
